src/styles/modules/cards/_package.scss
/**
* Package card modules scss file which includes style rules related to pricing
*/

// == package card
.package-card {
    padding-bottom: 1.875rem;
    border-radius: 4px;

    @include media(">sm") {
        padding-bottom: 2.5rem;//~2.813rem;
    }
}

.package-card-header {
    position: relative;
    padding: 0.813rem 1.25rem;
    border-radius: 4px 4px 0 0;

    @include media(">sm") {
        padding: 1.813rem 1.25rem;
    }

    .js-card-swiper {
        position: absolute;
        top: 50%;
        right: 1.25rem;
        padding: 0 0;
        background: none;
        border: 0;
        color: $brand-white;
        line-height: 1;
        outline: 0;
        transform: translateY(-50%);

        &.left {
            right: auto;
            left: 1.25rem;
        }
    }
}

.package-card-basic {
    @include media(">sm") {
        margin-top: 0.938rem;
    }
    .package-card-header {
        background: linear-gradient(259deg, #f1c20f, #f49315) !important;
    }
}

.package-card-prime {
    .package-card-header {
        background: linear-gradient(259deg, #e74c3c, #c0392b) !important;
        
        @include media(">sm") {
            padding: 2.2188rem 1.25rem;
        }
    }
}

.package-card-body,
.package-card-footer {
    padding: 0 0.938rem;

    @include media(">=ipad") {
        padding: 0 1.25rem;
    }
}

// == package card lists
.package-list-item {
    position: relative;
    padding: 0.70rem 0.75rem 0.70rem 1.875rem;
    line-height: 1;
    font-weight: 400;
    
    @include media(">=ipad") {
        padding: 0.70rem 0.75rem 0.70rem 2.5rem;
    }

    &.has-border {
        padding: 1.25rem 0 1.25rem 1.875rem;
        border-bottom: 1px solid $border-gray;
        
        @include media(">=ipad") {
            padding: 1.25rem 0 1.25rem 2.5rem;
        }

        .fa {
            position: absolute;
            top: 1.25rem;
        }

        + .package-list-item:not(.has-border) {
            margin-top: 0.75rem;
        }
    }

    &.is-sm {
       padding-top: .53rem;
       padding-bottom: .53rem;
    }

    &.has-icon-center {
        .fa {
            top: 50%;
            transform: translateY(-50%);
        }
    }

    .fa {
        position: absolute;
        top: 0.7rem;
        left: 0;

        @include media(">=ipad") {
            left: 0.75rem;
        }
    }
}

// == package-text-holder
.package-divider {
    margin: 1.125rem 0 1.625rem;
    padding: 0.938rem 0.75rem;
    border-top: 1px solid $border-gray;
    border-bottom: 1px solid $border-gray;

    @include media(">sm") {
        margin: 1.25rem 0 2.188rem;
        padding: 2rem 0.75rem;
    }
}

.package-divider-sm {
    padding: 0.938rem 0 0.938rem 0;//~1.25rem 0.75rem;

    @include media(">=ipad") {
        padding: 0.938rem 0 0.938rem 0.75rem;//~1.25rem 0.75rem;
    }
}

.package-storage-select {
    padding: 0.15rem 0.625rem;
    height: calc(2.876rem - 6px) !important;
}

.package-coming-soon {
    h6 {
        @include media(">sm") {
            padding-left: 0.75rem;
        }
    }

    .package-list {
        color: rgba(97, 97, 97, 0.87);
    }

    .fa {
        opacity: 0.4;
    }
}

.pay-type-list {
    >li {
        &:not(:last-of-type) {
            margin-bottom: 0.875rem;
        }
    }
}

.package-card .badge {
    margin-left: 0.5rem;
    padding: 0.5rem 0.3rem;
    border: 1px solid $brand-primary;
    color: $brand-primary;
    font-size: 0.875rem;
    font-weight: bold;
    vertical-align: middle;
}

// == Small screen code for package cards
@include media("<=sm") {
    // .package-basic-col.is-inactive-slide,
    // .package-prime-col.is-inactive-slide,
    // .package-basic-col {
    //     display: none;
    // }

    // .package-prime-col.is-inactive-slide + .package-basic-col {
    //     display: block;
    // }

    .package-basic-col {
        flex: 0 0 100%;
        max-width: 100%;
        transform: translateX(-45px);
        transition: all ceaser($easeInOutQuint) 0.35s;

        &.is-active-slide {
            transform: translateX(-100%);
        }

        .package-card {
            margin-right: 0;
            margin-left: auto;
        }
    }

    .package-prime-col {
        flex: 0 0 100%;
        max-width: 100%;
        transform: translateX(calc(-100% + 45px));
        transition: all ceaser($easeInOutQuint) 0.35s;

        &.is-active-slide,
        &.active-slide {
            transform: translateX(0%);
        }

        .package-card {
            margin-left: 0;
        }
    }

    .package-card {
        font-size: 0.875rem;
        width: calc(100% - 15px);

        h2 {
            font-size: 1.750rem;
        }

        .btn-lg {
            padding: .75rem 1.875rem;
            min-width: 235px;
        }
    }

    .currency-select-dropdown > .dropdown-toggle {
        width: 100% !important;
    }

    .pay-price + .small {
        font-size: 0.688rem;
    }

    // Package tab
    .package-xs-tab {
        display: flex;
        align-items: center;
        justify-content: center;
        margin: 1.25rem -0.625rem 1.25rem;
        padding: 0 0;
        line-height: 1;

        >li {
            padding: 0 0.625rem;

            &.is-active>a,
            &.active>a {
                color: $brand-black !important;
                text-decoration: underline !important;
            }
        }

        >li>a {
            color: $brand-gray;
            font-size: 0.875rem;
            font-weight: 500;

            &:hover {
                color: $brand-black !important;
            }
        }
    }
}
// == Setting page
@include media("<sm") {
    .package-card-holder{
        overflow: auto;
    }
}

